[package]
name = "quiche"
version = "0.21.0"
authors = ["Alessandro Ghedini <alessandro@ghedini.me>"]
edition = "2018"
build = "src/build.rs"
description = "🥧 Savoury implementation of the QUIC transport protocol and HTTP/3"
repository = "https://github.com/cloudflare/quiche"
readme = "README.md"
keywords = ["quic", "http3"]
categories = ["network-programming"]
license = "BSD-2-Clause"
rust-version = "1.66"
include = [
    "/*.md",
    "/*.toml",
    "/COPYING",
    "/deps/boringssl/**/*.[chS]",
    "/deps/boringssl/**/*.asm",
    "/deps/boringssl/src/**/*.cc",
    "/deps/boringssl/**/CMakeLists.txt",
    "/deps/boringssl/**/sources.cmake",
    "/deps/boringssl/LICENSE",
    "/examples",
    "/include",
    "/quiche.svg",
    "/src",
]

[features]
default = ["boringssl-vendored"]

# Build the vendored BoringSSL library.
boringssl-vendored = []

# Use the BoringSSL library provided by the boring crate.
boringssl-boring-crate = ["boring", "foreign-types-shared"]

# Build quiche against OpenSSL instead of BoringSSL.
openssl = ["pkg-config"]

# Generate pkg-config metadata file for libquiche.
pkg-config-meta = []

# Equivalent to "--cfg fuzzing", but can also be checked in build.rs.
fuzzing = []

# Build and expose the FFI API.
ffi = []

# Exposes internal APIs that have no stability guarantees across versions.
internal = []

[package.metadata.docs.rs]
no-default-features = true
features = ["boringssl-boring-crate", "qlog"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cmake = "0.1"
pkg-config = { version = "0.3", optional = true }

[dependencies]
boring = { workspace = true, optional = true }
either = { version = "1.8", default-features = false }
enum_dispatch = "0.3"
foreign-types-shared = { version = "0.3.0", optional = true }
intrusive-collections = "0.9.5"
libc = { workspace = true }
libm = "0.2"
log = { workspace = true, features = ["std"] }
octets = { workspace = true }
qlog = { workspace = true, optional = true }
sfv = { version = "0.9", optional = true }
slab = "0.4"
smallvec = { workspace = true, features = ["union"] }
ring = { workspace = true }
once_cell = "1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["wincrypt", "ws2def", "ws2ipdef", "ws2tcpip"] }

[dev-dependencies]
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "2.5"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
